change gitbub user and deactive command

--- a/ci-cd-codepipeline.cfn.yml
+++ b/ci-cd-codepipeline.cfn.yml
@@ -40,7 +40,7 @@ Parameters:
 
   GitHubUser:
     Type: String
-    Default: SudKul
+    Default: EslamMagdiFcis
     Description: GitHub username or organization
     MinLength: 3
     MaxLength: 100
@@ -60,7 +60,7 @@ Parameters:
     Description: IAM role used by kubectl to interact with EKS cluster
     MinLength: 3
     MaxLength: 100
-    ConstraintDescription: 
+    ConstraintDescription: UdacityFlaskDeployCBKubectlRole
 
 
 Metadata:
